updating logo and preview

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -236,8 +236,8 @@
         },
         "ce29e3a0": {
           "id": "ce29e3a0",
-          "path": "img/ico.png",
-          "output": "img/ico.png",
+          "path": "https://miguel-rivas.github.io/zapp/img/favicon.ico",
+          "output": "https://miguel-rivas.github.io/zapp/img/favicon.ico",
           "name": "ico.png",
           "category": "IMAGE",
           "size": 759,
@@ -249,8 +249,8 @@
         },
         "db13317d": {
           "id": "db13317d",
-          "path": "img/icon.png",
-          "output": "img/icon.png",
+          "path": "https://miguel-rivas.github.io/zapp/img/favicon.ico",
+          "output": "https://miguel-rivas.github.io/zapp/img/favicon.ico",
           "name": "icon.png",
           "category": "IMAGE",
           "size": 590,
